--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,8 +6,25 @@
     <title>CSS Play</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <script src='main.js'></script>
 </head>
 <body>
+    <div class='bubblewrap'>
+            <svg class="bubbles" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 701 1024" style="overflow: visible;">
+                <g class='float' stroke-width="7">
+                        <g>
+                            <g transform="translate(10 940)">
+                                <circle cx="35" cy="35" r="35"/>
+                            </g>
+                        </g>
+                        <g>
+                            <g transform="translate(10 450)">
+                                <circle cx="35" cy="35" r="35"/>
+                            </g>
+                        </g>
+                    </g>
+            </svg>
+    </div>
     <div class='container'>
         <button>Push Me</button>
     </div>
