--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,19 +10,30 @@
 </head>
 <body>
     <div class='bubblewrap'>
-            <svg class="bubbles" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 701 1024" style="overflow: visible;">
+            <svg class="bubbles" version='1.1' xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 701 1024" style="overflow: visible;">
                 <g class='float' stroke-width="7">
                         <g>
-                            <g transform="translate(10 940)">
-                                <circle cx="35" cy="35" r="35"/>
+                            <g transform="translate(100 440)">
+                                <ellipse cx="50" cy="55" rx="50" ry="55" />
                             </g>
                         </g>
                         <g>
-                            <g transform="translate(10 450)">
-                                <circle cx="35" cy="35" r="35"/>
+                            <g transform="translate(100 500)">
+                                <ellipse cx="50" cy="55" rx="50" ry="55" />
                             </g>
                         </g>
-                    </g>
+                        <g>
+                            <g transform="translate(130 475)">
+                                <ellipse cx="50" cy="55" rx="50" ry="55" />
+                            </g>
+                        </g>
+                        <g>
+                            <g transform="translate(70 475)">
+                                <ellipse cx="50" cy="55" rx="50" ry="55" />
+                            </g>
+                        </g>
+                </g>
+                <path d="M 100 100 V 200" fill="transparent" stroke='black' stroke-width="7"/>
             </svg>
     </div>
     <div class='container'>
