--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,29 +6,29 @@
     <title>CSS Play</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src='main.js'></script>
+    
 </head>
 <body>
     <div class='bubblewrap'>
             <svg class="bubbles" version='1.1' xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 701 1024" style="overflow: visible;">
                 <g class='float' stroke-width="7">
                         <g>
-                            <g transform="translate(100 440)">
+                            <g class='balloon' transform="translate(100 440)">
                                 <ellipse cx="50" cy="55" rx="50" ry="55" />
                             </g>
                         </g>
                         <g>
-                            <g transform="translate(100 500)">
+                            <g class='balloon' transform="translate(100 500)">
                                 <ellipse cx="50" cy="55" rx="50" ry="55" />
                             </g>
                         </g>
                         <g>
-                            <g transform="translate(130 475)">
+                            <g class='balloon' transform="translate(130 475)">
                                 <ellipse cx="50" cy="55" rx="50" ry="55" />
                             </g>
                         </g>
                         <g>
-                            <g transform="translate(70 475)">
+                            <g class='balloon' transform="translate(70 475)">
                                 <ellipse cx="50" cy="55" rx="50" ry="55" />
                             </g>
                         </g>
@@ -39,5 +39,6 @@
     <div class='container'>
         <button>Push Me</button>
     </div>
+    <script src='main.js'></script>
 </body>
 </html>
